# YUME

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
PLAN/pages/: help.md
YUME/: .gitignore  CMakeLists.txt
YUME/src/: main.cpp
YUME/src/engine/config/: config.h  yume_default.h
YUME/src/engine/core/: core.hpp  window.cpp  window.h
YUME/src/engine/gl_program/: gl_program.h  shader.h
YUME/src/engine/input/: input.cpp  input.h  keycodes.h
YUME/src/engine/math/: math.h
YUME/src/engine/renderer/game_objects/: square.cpp  square.h
example/: CMakeLists.txt  README.md
example/res/assistant/: Makefile  help.txt
example/res/shaders/: vertex.glsl
examples/: README.md
res/: fragment.glsl
res/assistant/: Makefile
res/assistant/data/: data.txt
res/assistant/src/: AIDataReader.py  AILib.py  assistant.py
res/shaders/: fragment.glsl
res/shaders/texsquare/: fragment.glsl  vertex.glsl
src/: main.cpp
src/engine/config/: config.h  data.h  essentials.h
src/engine/core/: assistant.cpp  assistant.h  scene.cpp  scene.h  window.cpp  window.h
src/engine/gl_program/: gl_program.cpp  gl_program.h  shader.cpp  shader.h
src/engine/input/: input.h  keycodes.h
src/engine/node/: node.cpp  node.h
src/engine/node_packages/: node_pcg.cpp  node_pcg.h
src/engine/project/: project.cpp  project.h  scene.h
src/engine/renderer/: colors.h  renderer.cpp  renderer.h  square.cpp  square.h  texsquare.cpp  texsquare.h  triangle.cpp  triangle.h
